# piggy-teaching-toolbox

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
backend/: __init__.py  config.py
backend/api/: dependencies.py  errors.py  main.py  validators.py
backend/api/routes/: audio.py  auth.py  characters.py  emotions.py  export.py  projects.py  storyboard.py  styles.py  tts.py
backend/core/: asset_exporter.py  exceptions.py  orchestrator.py  retry.py  script_planner.py  style_templates.py
backend/db/: models.py
backend/schemas/: models.py
backend/services/: cos_client.py  storage.py  tasks.py
frontend/: .dockerignore  components.d.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  style.css
scripts/: add_user.py  deploy-remote.sh  docker-deploy.sh  init_db.py  migrate_add_active_task.py  migrate_add_video_prompt.py  start_dev.sh
scripts/scf_zip_exporter/: README.md  index.py
tests/: __init__.py  conftest.py  test_api_audio.py  test_api_auth.py  test_api_characters.py  test_api_export.py  test_api_projects.py  test_api_storyboard.py  test_api_styles_emotions.py  test_api_tasks.py  test_asset_exporter.py  test_audio_generator.py  test_character_generator.py  test_database_models.py  test_integration_e2e.py  test_models.py  test_orchestrator.py  test_project_service.py  test_scene_generator.py  test_script_planner.py  test_storage.py  test_style_templates.py  test_subtitle_generator.py  test_web_interface.py
(+41 files in other folders)
