[tool.poetry]
name = "video-generator"
version = "0.1.0"
description = "基于 LangChain 的教学视频自动生成工具"
authors = ["Developer"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.3.0"
langchain-openai = "^0.2.0"
dashscope = "^1.20.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"
aiofiles = "^23.2.0"
httpx = "^0.27.0"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
PyJWT = "^2.10.0"
sqlalchemy = "^2.0.0"
pymysql = "^1.1.0"
cos-python-sdk-v5 = "^1.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
hypothesis = "^6.100.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
# CLI removed - use uvicorn directly:
# python3 -m uvicorn backend.api.main:app --reload --host 0.0.0.0 --port 8000

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["backend"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
]
